-bug fixes email to caps to small , password toggle visible icon

--- a/client/src/scss/style.all-account.scss
+++ b/client/src/scss/style.all-account.scss
@@ -1793,7 +1793,7 @@ tr {
     border-radius: 10px;
 }
 .ubo-btn-custom {width: 200px;}
-.ubo-barcode-container{ padding: 5px; background: #ffcf00; width: 416px; height: 189px }
+.ubo-barcode-container{ padding: 5px; background: #ffcf00; width: 450px; height: 189px }
 
 @media screen and (max-width: 768px){
     .heading_text{
